Eliminar archivos de cookies obsoletos y actualizar la lógica de autenticación para utilizar tokens de Supabase en lugar de JWT. Se implementa una estrategia personalizada para la validación de tokens y se ajusta el controlador y servicio de autenticación para manejar la autenticación basada en Supabase.

--- a/package.json
+++ b/package.json
@@ -23,20 +23,22 @@
     "@nestjs/common": "^11.0.1",
     "@nestjs/config": "^4.0.2",
     "@nestjs/core": "^11.0.1",
+    "@nestjs/jwt": "^11.0.0",
+    "@nestjs/passport": "^11.0.5",
     "@nestjs/platform-express": "^11.0.1",
     "@nestjs/typeorm": "^11.0.0",
+    "@supabase/supabase-js": "^2.76.1",
+    "bcryptjs": "^3.0.2",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
     "cookie-parser": "^1.4.7",
+    "passport": "^0.7.0",
+    "passport-custom": "^1.1.1",
+    "passport-jwt": "^4.0.1",
     "pg": "^8.16.3",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
-    "typeorm": "^0.3.26",
-    "@nestjs/jwt": "^11.0.0",
-    "@nestjs/passport": "^11.0.5",
-    "bcryptjs": "^3.0.2",
-    "passport": "^0.7.0",
-    "passport-jwt": "^4.0.1"
+    "typeorm": "^0.3.26"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.2.0",
