--- a/fly.toml
+++ b/fly.toml
@@ -1,8 +1,8 @@
-app = "multiPlatformVenue-back"
+app = "multiplatformvenue-back"
 primary_region = "syd"
 
 [http_service]
-  internal_port = 3001            # <-- usa el puerto real d e tu app
+  internal_port = 3001
   force_https = true
   auto_stop_machines = true
   auto_start_machines = true
