Update .nixpacks.toml for Node 22 and npm 10, enhance package.json scripts, and add health check endpoint in AppController.

--- a/.nixpacks.toml
+++ b/.nixpacks.toml
@@ -1,5 +1,14 @@
 providers = ["node"]
 
 [phases.setup]
-# elegí uno:
-nixPkgs = ["nodejs_20", "npm-10_x"]
+# Node 22 + npm 10
+nixPkgs = ["nodejs_22", "npm-10_x"]
+
+[phases.install]
+cmds = ["npm ci --include=dev"]
+
+[phases.build]
+cmds = ["npm run build"]
+
+[start]
+cmd = "node dist/main.js"
