Update .nixpacks.toml to remove npm dependency, upgrade npm to version 10.8.2, and add version checks during installation phase.

--- a/.nixpacks.toml
+++ b/.nixpacks.toml
@@ -1,10 +1,17 @@
+# .nixpacks.toml
 providers = ["node"]
 
 [phases.setup]
-nixPkgs = ["nodejs_22", "npm-10_x"]
+nixPkgs = ["nodejs_22"]      # sin npm aquí
+nixOverlays = []              # 👈 desactiva el overlay que fuerza npm-9
 
 [phases.install]
-cmds = ["npm ci --include=dev"]
+cmds = [
+  "node -v && npm -v",
+  "npm i -g npm@10.8.2",      # 👈 sube a npm 10
+  "npm -v",
+  "npm ci --include=dev"
+]
 
 [phases.build]
 cmds = ["npm run build"]
